row gap issue rectified

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ body {
 }
 
 nav {
-    padding-left: 10px;
+    padding: 10px;
 }
 
 a {
@@ -94,26 +94,22 @@ a {
 .class-page-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
-    grid-auto-rows: auto;
+    grid-auto-rows: 300px;
     gap: 10px;
     width: 90%;
     margin: 20px auto;
     justify-content: center;
-    overflow: hidden;
 }
 
 .class-page-grid .class-description {
-    background-color: #c0ced6
+    background-color: #e7e3ec;
+    padding: 20px;
 }
 
 .class-page-grid .grid-image img {
-    min-height: 0;
     object-fit: cover;
-    max-width: 100%;
-}
-
-.class-page-grid hr {
-    grid-area: 2 / 1 / span 1 / span 2;
+    height: 100%;
+    width: 100%;
 }
 
 /* Media Queries ------------------------------------------------------*/
